--- a/style.css
+++ b/style.css
@@ -160,13 +160,22 @@ main {
 
 /* Герой-секция */
 .hero {
-    background-image: url('pub2.jpg');
+    background-image: url('pub.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
     color: white;
     padding: 80px 20px;
     text-align: center;
     border-radius: var(--border-radius);
     margin-bottom: 40px;
+    
+    min-height: 60vh; 
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
+
 
 .hero-content h1 {
     font-size: 2.5rem;
@@ -461,3 +470,4 @@ footer p {
     }
 
 }
+
